--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
       </form>
 
       <div id="quote">
-        <p>You and $<span id="perfect-match"></span> are perfect for eachother!</p>
+        <p>You and <span id="perfect-match"></span> are perfect for eachother!</p>
       </div>
+  
     </div>
   </body>
 </html>
